# copilot

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build_and_publish_appimage.yml
app/: config.py  desktop.py  desktop_defs.py  memory.py  webview.py
app/chats/: base.py  chat_loader.py  drawer_chat.py  greetings.py  llm_chat.py  profiles.py  settings.py  tools.py
app/chats/code_reviewer/: chats.py
app/chats/telegram/: chats.py  content_generator.py  message_aggregator.py  message_extractor.py  utils.py
app/dialogs/: base.py  constants.py  dalle_chat.py  dialog_loader.py  drawer_chat.py  gpt_chat.py  greetings.py  llm_chat.py  profiles.py  prompts.py  searcher.py  settings.py
app/dialogs/code_reviewer/: dialogs.py
app/dialogs/telegram/: content_generator.py  dialogs.py  message_aggregator.py  message_extractor.py
app/models/openai/: base.py  constants.py  utils.py
app/tools/: additional_utils.py  all.py  code.py  file_system.py  files.py
app/utils/: common.py  file_processor.py  local_file_storage.py  searching.py  system.py  text_processing.py  yaml.py
app/web/: middlewares.py
demo_configs/: base.yaml  dialogs.yaml  models.yaml
demo_configs/profiles/: personal.yaml
demo_configs/prompts/: prompt_generator.yaml
example_of_configs/: base.yaml
example_of_configs/profiles/: personal.yaml
example_of_configs/prompts/: editorial_review.yaml
gui/: .prettierrc  package-lock.json  package.json
gui/public/: baseStyle.css  index.html  manifest.json  serviceWorker.js
gui/src/: Chat.js  Messenger.js  index.js  style.css  utils.js
gui/src/components/: ChatTabs.js  Footer.js  Header.js  Markdown.js  Message.js  Notification.js
gui/src/hooks/: useActiveChat.js  useAudioRecording.js  useChat.js  useChatState.js  useDialog.js  useFileUpload.js  useInput.js  useMessengerState.js  useNotifications.js  useSettings.js
scripts/: build_appimage.sh
